--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,7 @@ loom {
     splitEnvironmentSourceSets()
 
 	mods {
-		"lom-head-mod" {
+		"lom-skin-flipper" {
 			sourceSet sourceSets.main
 			sourceSet sourceSets.client
 		}
