--- a/build.gradle
+++ b/build.gradle
@@ -43,8 +43,8 @@ dependencies {
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
 	// Cloth/ModMenu
-//	modImplementation "me.shedaniel.cloth:cloth-config-fabric:8.2.88"
-	modImplementation "com.terraformersmc:modmenu:9.0.0"
+	modImplementation "me.shedaniel.cloth:cloth-config-fabric:${project.cloth_config_version}"
+	modImplementation "com.terraformersmc:modmenu:${project.mod_menu_version}"
 	
 }
 
