--- a/gradle.properties
+++ b/gradle.properties
@@ -12,6 +12,8 @@ loader_version=0.15.5
 mod_version=1.0.1
 maven_group=com.duelco
 archives_base_name=lom-skin-flipper
+mod_menu_version=9.0.0
+cloth_config_version=13.0.121
 
 # Dependencies
 fabric_version=0.97.0+1.20.4
