--- a/gradle.properties
+++ b/gradle.properties
@@ -5,8 +5,8 @@ org.gradle.parallel=true
 # Fabric Properties
 # check these on https://fabricmc.net/develop
 minecraft_version=1.21
-yarn_mappings=1.21+build.3
-loader_version=0.15.11
+yarn_mappings=1.21+build.9
+loader_version=0.16.9
 
 # Mod Properties
 mod_version=1.0.2
@@ -14,6 +14,7 @@ maven_group=com.duelco
 archives_base_name=lom-enhanced
 mod_menu_version=11.0.0
 cloth_config_version=15.0.127
+owo_version=0.12.14-pre.1+1.21
 
 # Dependencies
-fabric_version=0.99.5+1.21
+fabric_version=0.102.0+1.21
