Switching from using Cloth Config to using MidnightConfig due to more functionality.

--- a/gradle.properties
+++ b/gradle.properties
@@ -14,6 +14,7 @@ maven_group=com.duelco
 archives_base_name=lom-enhanced
 mod_menu_version=11.0.0
 cloth_config_version=15.0.127
+midnightlib_version=1.6.3-fabric
 owo_version=0.12.14-pre.1+1.21
 
 # Dependencies
