--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,9 @@ repositories {
 		url 'https://maven.wispforest.io/releases/'
 	}
 	maven {
+		url = "https://api.modrinth.com/maven"
+	}
+	maven {
 		name = "Mod Menu"
 		url = "https://maven.terraformersmc.com/"
 	}
@@ -51,8 +54,8 @@ dependencies {
 	// Fabric API. This is technically optional, but you probably want it anyway.
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
-	// Cloth/ModMenu
-	modImplementation "me.shedaniel.cloth:cloth-config-fabric:${project.cloth_config_version}"
+	// MidnightLib/ModMenu
+	modImplementation include ("maven.modrinth:midnightlib:${project.midnightlib_version}")
 	modImplementation "com.terraformersmc:modmenu:${project.mod_menu_version}"
 
 	// owo-lib
