--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-	id 'fabric-loom' version '1.6-SNAPSHOT'
+	id 'fabric-loom' version '1.8.9'
 	id 'maven-publish'
 }
 
@@ -11,7 +11,10 @@ base {
 }
 
 repositories {
-
+	maven {
+		name = "Xander Maven"
+		url = "https://maven.isxander.dev/releases"
+	}
 	maven {
 		url 'https://maven.wispforest.io/releases/'
 	}
@@ -23,11 +26,6 @@ repositories {
 		url = "https://maven.terraformersmc.com/"
 	}
 	maven {
-		name = "Cloth Config"
-		url = "https://maven.shedaniel.me/"
-	}
-
-	maven {
 		url = "https://pkgs.dev.azure.com/djtheredstoner/DevAuth/_packaging/public/maven/v1"
 	}
 }
@@ -36,15 +34,14 @@ loom {
     splitEnvironmentSourceSets()
 
 	mods {
-		"lom-enhanced" {
+		"duelutils" {
 			sourceSet sourceSets.main
 			sourceSet sourceSets.client
 		}
 	}
 
 }
-repositories {
-}
+
 dependencies {
 	// To change the versions see the gradle.properties file
 	minecraft "com.mojang:minecraft:${project.minecraft_version}"
@@ -54,8 +51,8 @@ dependencies {
 	// Fabric API. This is technically optional, but you probably want it anyway.
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
-	// MidnightLib/ModMenu
-	modImplementation include ("maven.modrinth:midnightlib:${project.midnightlib_version}")
+	// YACL/ModMenu
+	modImplementation "dev.isxander:yet-another-config-lib:${project.yacl_version}"
 	modImplementation "com.terraformersmc:modmenu:${project.mod_menu_version}"
 
 	// owo-lib
