--- a/gradle.properties
+++ b/gradle.properties
@@ -15,6 +15,7 @@ archives_base_name=lom-enhanced
 mod_menu_version=11.0.0
 cloth_config_version=15.0.127
 midnightlib_version=1.6.3-fabric
+yacl_version=3.6.1+1.21-fabric
 owo_version=0.12.14-pre.1+1.21
 
 # Dependencies
