--- a/gradle.properties
+++ b/gradle.properties
@@ -4,17 +4,17 @@ org.gradle.parallel=true
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
-minecraft_version=1.21
-yarn_mappings=1.21+build.9
+minecraft_version=1.21.4
+yarn_mappings=1.21.4+build.1
 loader_version=0.16.9
 
 # Mod Properties
-mod_version=1.2
+mod_version=1.4
 maven_group=com.duelco
 archives_base_name=jimmytools
-mod_menu_version=11.0.0
-yacl_version=3.6.1+1.21-fabric
-owo_version=0.12.14-pre.1+1.21
+mod_menu_version=12.0.0
+yacl_version=3.6.2+1.21.4-fabric
+owo_version=0.12.19+1.21.4
 
 # Dependencies
 fabric_version=0.102.0+1.21
